# clldappconfig

./: README.md  RELEASING.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
src/appconfig/: __init__.py  __main__.py  config.py  helpers.py
src/appconfig/tasks/: __init__.py  deployment.py  letsencrypt.py  other.py
src/clldappconfig/: __init__.py  config.py
src/clldappconfig/commands/: ls.py
src/clldappconfig/tasks/: deployment.py  letsencrypt.py  other.py
src/clldappconfig/templates/: nginx-app.conf
src/clldappconfig/templates/buildbot/: nginx-app.conf
tests/: apps.ini  conftest.py  test_cdstar.py  test_cli.py  test_config.py  test_deployment.py  test_helpers.py  test_init.py  test_letsencrypt.py  test_other.py  test_systemd.py  test_tasks.py  test_util.py
tests/apps/: apps.ini
