[metadata]
name = appconfig
version = 0.0
author = ''
author_email = lingweb@shh.mpg.de
description = Remote control for DLCE apps
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: Apache Software License


[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
install_requires =
    attrs >= 18.1.0
    clldutils >= 3.5
    Fabric3 >= 1.11
    fabtools-python >= 0.19.7
    python-dateutil
    Jinja2
    pytz
    pycdstar >= 0.4.1
    cdstarcat >= 1.2

include_package_data = True

[options.package_data]
appconfig = templates/*

[options.packages.find]
where = src

[options.extras_require]
dev =
    flake8
test =
    mock
    pytest >= 4.6
    pytest-mock
    pytest-cov
	tox

[options.entry_points]
console_scripts =
    appconfig = appconfig.__main__:main

[tool:pytest]
minversion = 3.3
testpaths = tests
addopts = --cov=appconfig --cov-report=term-missing
mock_use_standalone_module = true

[flake8]
ignore = E126,E128
max-line-length = 100
exclude = .tox

[tox:tox]
envlist = py36, py38, py39, py310, flake
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}

[testenv:flake]
basepython = py38
deps = .[dev]
commands = flake8 src/ tests/
