[metadata]
name = clldappconfig
version = 1.0.0
author = ''
author_email = lingweb@shh.mpg.de
description = Remote control for DLCE apps
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.6
install_requires =
    cdstarcat >= 1.2
    clldutils >= 3.5
    Fabric3 >= 1.11
    fabtools-python >= 0.19.7
    Jinja2
    pycdstar >= 0.4.1
    pytz
    importlib_resources

include_package_data = True

[options.package_data]
clldappconfig = templates/*

[options.packages.find]
where = src

[options.extras_require]
dev =
    flake8
test =
    pytest >= 4.6
    pytest-mock
    pytest-cov
	tox

[options.entry_points]
console_scripts =
    appconfig = clldappconfig.__main__:main

[tool:pytest]
minversion = 3.3
testpaths = tests
addopts = --cov=clldappconfig --cov-report=term-missing

[flake8]
ignore = E126, E128, E731, W503
max-line-length = 100
exclude = .tox

[tox:tox]
envlist = py37, py38, py39, py310, flake
isolated_build = true
skip_missing_interpreter = true

[gh-actions]
python =
    3.7: py37
    3.8: py38, flake
    3.9: py39
    3.10: py310

[testenv]
deps = .[test]
commands = pytest {posargs}

[testenv:flake]
basepython = python3.8
deps = .[dev]
commands = flake8 src/ tests/

