[metadata]
name = clldappconfig
version = 1.1.0
author = ''
author_email = dlce.rdm@eva.mpg.de
description = Remote control for DLCE apps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dlce-eva/clldappconfig
project_urls =
    Bug Tracker = https://github.com/dlce-eva/clldappconfig/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
	Operating System :: Unix
	Operating System :: POSIX

[options]
packages = find:
package_dir =
    = src
# we can only support versions up to python3.9 because python 3.10 breaks
# fabric 1
python_requires = >=3.6, <3.10
install_requires =
    cdstarcat >= 1.2
    clldutils >= 3.5
    Fabric3 >= 1.11
    fabtools-python >= 0.19.7
    importlib_resources >= 1.4;python_version<'3.9'
    Jinja2
    pycdstar >= 0.4.1
    pytz

include_package_data = True

[options.package_data]
clldappconfig = templates/*

[options.packages.find]
where = src

[options.extras_require]
dev =
    flake8
	black
    build
    twine
test =
    pytest >= 4.6
    pytest-mock
    pytest-cov
    tox

[options.entry_points]
console_scripts =
    appconfig = clldappconfig.__main__:main

[tool:pytest]
minversion = 3.3
testpaths = tests
addopts = --cov=clldappconfig --cov-report=term-missing

[flake8]
# black compatible line lenght
# cf. https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E126, E128, E203, E501, E731, W503
exclude = .tox

[tox:tox]
envlist = py37, py38, py39, linter
isolated_build = true
skip_missing_interpreter = true

[gh-actions]
python =
    3.7: py37
    3.8: py38, linter
    3.9: py39
#   3.10: py310

[testenv]
deps = .[test]
commands = pytest {posargs}

[testenv:linter]
basepython = python3.8
deps = .[dev]
commands =
    flake8 src/ tests/
	black --check src/ tests/
